Tweak dist.ini, fix repo urls and prereqs
Signed-off-by: Pedro Melo <melo@simplicidade.org>

--- a/dist.ini
+++ b/dist.ini
@@ -9,8 +9,8 @@ copyright_year   = 2010
 [MetaJSON]
 
 [MetaResources]
-repository.url    = http://github.com/melo/NAME.git
-repository.web    = http://github.com/melo/NAME/
+repository.url    = http://github.com/melo/anyevent-webservice-notifo.git
+repository.web    = http://github.com/melo/anyevent-webservice-notifo/
 repository.type   = git
 
 [PodWeaver]
@@ -24,12 +24,9 @@ repository.type   = git
 [CheckChangeLog]
 
 [Prereqs / RuntimeRequires]
-
-[Prereqs / RuntimeRecommends]
-
-[Prereqs / TestRequires]
-
-[Prereqs / TestRecommends]
+AnyEvent::HTTP   = 0
+parent           = 0
+Protocol::Notifo = 0
 
 [@Git]
 [Git::CommitBuild]
